# personal-ai

./: .gitignore  README.md  TODO.md  bun.lockb  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  resources.md  splashscreen.html  tailwind.config.js  tsconfig.json  tsconfig.node.json  turbo.json  vite.config.ts
ai/: .gitignore  README.md  Tasks.md  bun.lockb  bunfig.toml  clean.sh  focal_first_ai.db  index.ts  main.py  package.json  pyproject.toml  requirement.txt  tsconfig.json
ai/app/: __init__.py  app.py  constants.py  requirement.txt
ai/app/core/: config.py
ai/app/database/: __init__.py  chat.py  database.py  db.py  schema.py  settings.py
ai/app/enums/: __init__.py  ai.py  ai_provider.py  chat.py  chat_history_time.py  topic.py
ai/app/models/: api_config_request.py  chat_model.py  request.py  response.py
ai/app/routes/: __init__.py  chat.py  endpoints.py  search.py  setting.py
ai/app/services/: ai.py
ai/app/services/document_processing/: document_handler.py  embeddings.py  text_splitter.py
ai/app/services/text_processing/: text_to_embeddings.py
ai/app/tests/: test.py  test_build_prompt_from_messages.py
ai/app/utils/: helpers.py
apps/ai/: README.md  main.py  package.json  pyproject.toml  requirement.txt
apps/app/: package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
apps/app/src/: App.tsx  index.css
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src/constants/: index.tsx
apps/app/src/lib/: utils.ts
extensions/analytics/: README.md  manifest.json
extensions/pdf-reader/: manifest.json
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/__test__/: generateShortCuts.test.ts  isEqual.test.ts
src/components/activity-bar/: activity-bar-item.tsx  activity-bar.tsx  index.ts  typewriter-effect.tsx
src/components/animated-components/: index.ts  moving-border.tsx
src/components/body/: index.ts
src/components/general-components/: index.ts  markdown.component.tsx  pined-card.tsx  search-box.tsx
src/components/header/: tab-item.tsx  top-header.tsx
src/components/sidebar/: chat-history-sidebar.tsx  context-search-sidebar.tsx  default-sidebar.tsx  extensions-sidebar.tsx  important-chat-sidebar.tsx  index.ts  secondary-sidebar.tsx  settings-sidebar.tsx  sidebar-icon.tsx  sidebar-item.tsx  sidebar.tsx
src/components/ui/: button.tsx  dropdown-menu.tsx  scroll-area.tsx  toast.tsx  toaster.tsx  tooltip.tsx
src/components/workbench/: auto-resizing-input.tsx  body.tsx  generate-text-effect.tsx  index.ts  workbench.tsx
src/config/: endpoint.ts  env.ts
src/constants/: dummy-data.ts  icon.tsx  index.tsx
src/context/: platform.context.tsx
src/core/: index.ts
src/core/constants/: events.key.ts
src/core/reactive/: README.md
src/core/types/: aiProvider.d.ts  apiConfig.d.ts  appConfig.d.ts  enum.ts  index.d.ts  index.ts  llm.d.ts  sidebar.d.ts
src/hooks/: useAvailableModels.ts  useChat.ts  useChatData.ts  useKeyDown.ts  useLocalLLM.ts
src/lib/: index.ts  isEqual.ts  utils.ts
src/screen/: test.ui.tsx
src/store/: store.ts  tab.ts
(+87 files in other folders)
